--- a/src/js/dossier.less
+++ b/src/js/dossier.less
@@ -22,7 +22,7 @@
 main {
   flex: 1 0 auto;
   display: flex;
-  margin: @header_height + 8px auto 72px auto;
+  margin: 8px auto 72px auto;
 }
 
 h1.title {
